--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "xb2-node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/main.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "hackrabbit",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "express": "^4.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
