--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "xb2-node",
   "version": "1.0.0",
-  "main": "src/main.js",
+  "description": "A simple Node.js server for XB2",
+  "author": "hackrabbit <hackrabbit@qq.com>",
   "scripts": {
-    "dev": "nodemon src/main.js"
+    "start:dev": "tsc-watch --onSuccess \"node dist/main.js\"",
+    "format": "prettier --write \"src/**/*.ts\""
   },
-  "keywords": [],
-  "author": "hackrabbit",
-  "license": "MIT",
-  "description": "",
   "dependencies": {
     "express": "^4.21.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.4",
+    "prettier": "^3.3.3",
+    "tsc-watch": "^6.2.0",
+    "typescript": "^5.6.2"
   }
 }
