--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
+    "dotenv": "^16.4.5",
     "prettier": "^3.3.3",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.2"
