--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.11.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^22.5.4",
     "dotenv": "^16.4.5",
     "prettier": "^3.3.3",
